[package]
name = "madhouse_steve_tmi"
version = "0.2.0"
authors = ["Madhouse Steve <steve@madhouseminers.com>"]
edition = "2018"
license = "MIT"
description = "A Twitch Messaging Interface client"
repository = "https://github.com/MadhouseSteve/madhouse_steve_tmi"
homepage = "https://github.com/MadhouseSteve/madhouse_steve_tmi"
documentation = "https://docs.rs/madhouse_steve_tmi"
keywords = ["twitch", "tmi"]
categories = ["network-programming", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
